Made some changes in design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Guess The Number</title>
 </head>
 <body>
-    <h1>Guess the Number Game</h1>
+    <video autoplay muted loop> 
+    <source src="images/GuessTheNumber.mp4" type="video/mp4">
+    </video>
     <div id="maindiv">
         <div id="inputdiv">
             <label for="userInput">Guess a number</label>
